Add basis for rendering

--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,6 @@
 			<button id="forceRender">Render</button><br />
 			<textarea readonly id="inputsDisplay"></textarea>
 		</div>
+		PixiJS rendering soon:
 	</body>
 </html>
