Move rendering to normal place

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		Yay NotCC
-		<table id="renderSpace"></table>
+		<div id="renderSpace"></div>
 		<div id="devTools" class="hidden">
 			<h3>Debug tools</h3>
 			<span>FPS: <span id="fps"></span></span><br />
@@ -15,6 +15,5 @@
 			<button id="forceRender">Render</button><br />
 			<textarea readonly id="inputsDisplay"></textarea>
 		</div>
-		PixiJS rendering soon:
 	</body>
 </html>
