--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,6 @@
 	<body>
 		Yay NotCC
 		<div id="renderSpace"></div>
-		<div id="devTools" class="hidden">
-			<h3>Debug tools</h3>
-			<span>FPS: <span id="fps"></span></span><br />
-			<button id="forceTick">Tick</button><br />
-			<button id="forceRender">Render</button><br />
-			<textarea readonly id="inputsDisplay"></textarea>
-		</div>
+		<span id="fpsCounter"></span>
 	</body>
 </html>
