Fix collision, update the level to include gravel

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 	<body>
 		Yay NotCC
 		<div id="renderSpace"></div>
+		<div id="itemSpace"></div>
 		<span id="fpsCounter"></span>
 	</body>
 </html>
