Add a calculation delay counter

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
 		<div id="renderSpace"></div>
 		<div id="itemSpace"></div>
 		<span id="fpsCounter"></span>
+		<span id="delayCounter"></span>
 	</body>
 </html>
