Clean up the html

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<link rel="icon" href="data/img/icon.png" />
+		<title>NotCC</title>
 	</head>
 	<body>
 		Yay NotCC
