Add a chip counter

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 		<div id="renderSpace"></div>
 		<div id="itemSpace"></div>
 		<span id="fpsCounter"></span>
+		<span id="textStats"></span>
 		<span id="delayCounter"></span>
 	</body>
 </html>
