Add level set playing

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
 		Yay NotCC
 		<div id="renderSpace"></div>
 		<div id="itemSpace"></div>
-		<span id="fpsCounter"></span>
-		<span id="textStats"></span>
-		<span id="delayCounter"></span>
+		<brList>
+			<span id="textStats"></span>
+			<span id="fpsCounter"></span>
+			<span id="delayCounter"></span>
+			<button id="levelInputButton">Load level...</button>
+		</brList>
 	</body>
 </html>
