Add a level list

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 			<span id="fpsCounter"></span>
 			<span id="delayCounter"></span>
 			<button id="levelInputButton">Load level...</button>
+			<select multiple id="levelList"></select>
 		</brList>
 	</body>
 </html>
