Add NotCC a TW-style new look

--- a/gamePlayer/src/index.html
+++ b/gamePlayer/src/index.html
@@ -7,15 +7,15 @@
 		<title>NotCC</title>
 	</head>
 	<body>
-		Yay NotCC
-		<div id="renderSpace"></div>
-		<div id="itemSpace"></div>
-		<brList>
-			<span id="textStats"></span>
-			<span id="fpsCounter"></span>
-			<span id="delayCounter"></span>
-			<button id="levelInputButton">Load level...</button>
+		<div id="renderSpace" class="sunken"></div>
+		<div id="miscThings" class="raised">
+			<textarea readonly id="textStats" class="sunken"></textarea><br />
+			<div id="itemSpace"></div>
 			<select multiple id="levelList"></select>
-		</brList>
+			<br />
+			<button id="levelInputButton">Load level...</button><br />
+			<span id="fpsCounter"></span><br />
+			<span id="delayCounter"></span><br />
+		</div>
 	</body>
 </html>
