Add level replay to the player

--- a/gamePlayer/src/index.html
+++ b/gamePlayer/src/index.html
@@ -11,6 +11,9 @@
 		<div id="miscThings" class="raised">
 			<textarea readonly id="textStats" class="sunken"></textarea><br />
 			<div id="itemSpace"></div>
+			<button id="levelSolutionButton" style="display: none">
+				Replay level solution</button
+			><br />
 			<select multiple id="levelList"></select>
 			<br />
 			<button id="levelInputButton">Load level...</button><br />
