Add a <noscript> message (Fixed #8)

--- a/gamePlayer/src/index.html
+++ b/gamePlayer/src/index.html
@@ -7,7 +7,15 @@
 		<title>NotCC</title>
 	</head>
 	<body>
-		<div id="renderSpace" class="sunken"></div>
+		<div id="renderSpace" class="sunken">
+			<noscript
+				><div class="textbox">
+					You don't have JavaScript enabled!<br />
+					You need it to play NotCC.<br />
+					Enable it.
+				</div>
+			</noscript>
+		</div>
 		<div id="miscThings" class="raised">
 			<textarea readonly id="textStats" class="sunken"></textarea><br />
 			<div id="itemSpace"></div>
