Add game player NCCS things

--- a/gamePlayer/src/index.html
+++ b/gamePlayer/src/index.html
@@ -22,9 +22,13 @@
 			<button id="levelSolutionButton" style="display: none">
 				Replay level solution</button
 			><br />
+			<button id="customSolutionButton">Replay custom solution...</button><br />
 			<select multiple id="levelList"></select>
 			<br />
 			<button id="levelInputButton">Load level...</button><br />
+			<button id="downloadSolutionButton" style="display: none">
+				Download latest player solution
+			</button>
 			<span id="fpsCounter"></span><br />
 			<span id="delayCounter"></span><br />
 		</div>
