Replace webpack with rollup for the game player

--- a/gamePlayer/src/index.html
+++ b/gamePlayer/src/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" href="data/img/icon.png" />
+		<link rel="stylesheet" type="text/css" href="index.css" />
 		<title>NotCC</title>
 	</head>
 	<body>
@@ -32,5 +33,6 @@
 			<span id="fpsCounter"></span><br />
 			<span id="delayCounter"></span><br />
 		</div>
+		<script src="index.js" />
 	</body>
 </html>
