Add extended mode, which disables dispawning

--- a/gamePlayer/src/index.html
+++ b/gamePlayer/src/index.html
@@ -33,6 +33,6 @@
 			<span id="fpsCounter"></span><br />
 			<span id="delayCounter"></span><br />
 		</div>
-		<script src="index.js" />
+		<script src="index.js"></script>
 	</body>
 </html>
