Make UI more modular and add custom color schemes

--- a/gamePlayer/src/index.html
+++ b/gamePlayer/src/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="index.css" />
 		<title>NotCC</title>
 	</head>
-	<body>
+	<body class="blue">
 		<div id="renderSpace" class="sunken">
 			<noscript
 				><div class="textbox">
@@ -19,7 +19,7 @@
 		</div>
 		<div id="miscThings" class="raised">
 			<textarea readonly id="textStats" class="sunken"></textarea><br />
-			<div id="itemSpace"></div>
+			<div id="itemSpace" class="sunken"></div>
 			<button id="levelSolutionButton" style="display: none">
 				Replay level solution</button
 			><br />
