Rewrite the renderer class

--- a/gamePlayer/src/index.html
+++ b/gamePlayer/src/index.html
@@ -16,10 +16,11 @@
 					Enable it.
 				</div>
 			</noscript>
+			<canvas id="viewportCanvas" style="display: none"></canvas>
 		</div>
 		<div id="miscThings" class="raised">
 			<textarea readonly id="textStats" class="sunken"></textarea><br />
-			<div id="itemSpace" class="sunken"></div>
+			<div id="itemSpace" class="sunken"><canvas id="itemCanvas"></canvas></div>
 			<button id="levelSolutionButton" style="display: none">
 				Replay level solution</button
 			><br />
