Change the gamePlayer build system to use vite

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="data/img/icon.png" />
-		<link rel="stylesheet" type="text/css" href="index.css" />
+		<link rel="icon" href="/icon.png" />
 		<title>NotCC</title>
 	</head>
 	<body class="blue">
@@ -34,6 +33,6 @@
 			<span id="fpsCounter"></span><br />
 			<span id="delayCounter"></span><br />
 		</div>
-		<script src="index.js"></script>
+		<script src="/src/index.ts" type="module"></script>
 	</body>
 </html>
