--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -6,33 +6,46 @@
 		<link rel="icon" href="/icon.png" />
 		<title>NotCC</title>
 	</head>
-	<body class="blue">
-		<div id="renderSpace" class="sunken">
-			<noscript
-				><div class="textbox">
-					You don't have JavaScript enabled!<br />
-					You need it to play NotCC.<br />
-					Enable it.
+	<body class="gameBody">
+		<nav class="sidebar container">
+			<div title="Set Selector" class="sidebarButton" id="selectorTab">
+				<img src="./tabIcons/leaf.svg" draggable="false" />
+			</div>
+			<div title="Level" class="sidebarButton" id="levelTab">
+				<div class="levelIconContainer">
+					<img src="./tabIcons/level.svg" draggable="false" />
+					<div id="levelIconText">?</div>
 				</div>
-			</noscript>
-			<canvas id="viewportCanvas" style="display: none"></canvas>
-		</div>
-		<div id="miscThings" class="raised">
-			<textarea readonly id="textStats" class="sunken"></textarea><br />
-			<div id="itemSpace" class="sunken"><canvas id="itemCanvas"></canvas></div>
-			<button id="levelSolutionButton" style="display: none">
-				Replay level solution</button
-			><br />
-			<button id="customSolutionButton">Replay custom solution...</button><br />
-			<select multiple id="levelList"></select>
-			<br />
-			<button id="levelInputButton">Load level...</button><br />
-			<button id="downloadSolutionButton" style="display: none">
-				Download latest player solution
-			</button>
-			<span id="fpsCounter"></span><br />
-			<span id="delayCounter"></span><br />
-		</div>
+			</div>
+			<div title="Solutions" class="sidebarButton" id="solutionTab">
+				<img src="./tabIcons/floppy.svg" draggable="false" />
+			</div>
+			<div title="Optimization" class="sidebarButton" id="optimizationTab">
+				<img src="./tabIcons/clock.svg" draggable="false" />
+			</div>
+			<div title="Settings" class="sidebarButton bottomButton" id="settingsTab">
+				<img src="./tabIcons/tools.svg" draggable="false" />
+			</div>
+			<div title="About" class="sidebarButton" id="aboutTab">
+				<img src="./tabIcons/info.svg" draggable="false" />
+			</div>
+		</nav>
+		<main id="loadingPage" class="container"><p>Loading, standy...</p></main>
+		<main id="levelPlayerPage" class="container closedPage">
+			<canvas class="viewport pixelCanvas"></canvas>
+			<div class="stats">
+				<div>Chips:</div>
+				<output id="chipsText">12</output>
+				<div>Time left:</div>
+				<output id="timeLeftText">120s</output>
+				<div>Bonus points:</div>
+				<output id="bonusPointsText">4200</output>
+			</div>
+			<canvas class="inventory pixelCanvas"></canvas>
+		</main>
+		<main id="setSelectorPage" class="container closedPage">
+			<button id="loadDefaultLevel">Load default level</button>
+		</main>
 		<script src="/src/index.ts" type="module"></script>
 	</body>
 </html>
