Add level completion prompts

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -38,16 +38,18 @@
 					<div id="overlayWinContents">
 						<h3>You won!!</h3>
 						<div class="buttonContainer container">
-							<button id="restartButton">Scores</button>
-							<button id="restartButton">Next level</button>
-							<button id="restartButton">Explode Jupiter</button>
+							<button id="scoresButton">Scores</button>
+							<button id="nextLevelButton" class="mainButton">
+								Next level
+							</button>
+							<button id="explodeJupiterButton">Explode Jupiter</button>
 						</div>
 					</div>
 					<div id="overlayLoseContents">
 						<h3 class="deathOnly">You died...</h3>
-						<h3 class="noTimeOnly">You ran out of time...</h3>
+						<h3 class="timeoutOnly">You ran out of time...</h3>
 						<div class="buttonContainer container">
-							<button id="restartButton">Restart</button>
+							<button id="restartButton" class="mainButton">Restart</button>
 						</div>
 					</div>
 				</div>
