Add other loading buttons

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -71,7 +71,11 @@
 			<canvas class="pixelCanvas" id="levelInventoryCanvas"></canvas>
 		</main>
 		<main class="container closedPage" id="setSelectorPage">
-			<button id="loadDefaultLevel">Load default level</button>
+			<button id="loadDefaultLevel" class="bigButton">
+				Load default level
+			</button>
+			<button id="loadFile" disabled>Load file</button>
+			<button id="loadDirectory" disabled>Load directory</button>
 		</main>
 		<script src="/src/index.ts" type="module"></script>
 	</body>
