Add level set loading in the game player

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -77,7 +77,7 @@
 			<input type="file" id="fileLoader" accept=".c2m,.zip" />
 			<button id="loadFile">Load file</button>
 			<input type="file" webkitdirectory id="directoryLoader" />
-			<button id="loadDirectory" disabled>Load directory</button>
+			<button id="loadDirectory">Load directory</button>
 		</main>
 		<script src="/src/index.ts" type="module"></script>
 	</body>
