--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -58,6 +58,9 @@
 							<button id="restartButton" class="mainButton">Restart</button>
 						</div>
 					</div>
+					<div id="overlayPauseContents">
+						<h3>Paused</h3>
+					</div>
 				</div>
 			</div>
 			<div class="stats">
