Base the current level on global state

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -61,6 +61,9 @@
 					<div id="overlayPauseContents">
 						<h3>Paused</h3>
 					</div>
+					<div id="overlayPreplayContents">
+						<h3 id="overlayLevelName">LEVEL NAME</h3>
+					</div>
 				</div>
 			</div>
 			<div class="stats">
