Dynamically calculate the current hint

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -75,6 +75,7 @@
 				<output id="bonusPointsText">4200</output>
 			</div>
 			<canvas class="pixelCanvas" id="levelInventoryCanvas"></canvas>
+			<div class="container" id="hintBox"></div>
 		</main>
 		<main class="container closedPage" id="setSelectorPage">
 			<button id="loadDefaultLevel" class="bigButton">
