Add a level list dialog

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -36,6 +36,22 @@
 				<img src="./tabIcons/info.svg" tabindex="0" draggable="false" />
 			</div>
 		</nav>
+		<dialog id="levelListDialog">
+			<header>Level list</header>
+			<section>
+				<table id="levelList">
+					<thead>
+						<tr>
+							<th>№</th>
+							<th>Level</th>
+						</tr>
+					</thead>
+					<tbody></tbody>
+				</table>
+			</section>
+
+			<footer><button class="closeButton">Ok</button></footer>
+		</dialog>
 		<main id="loadingPage" class="container"><p>Loading, standy...</p></main>
 		<main id="levelPlayerPage" class="container closedPage">
 			<div class="viewportArea">
