Add a post-last level game state

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -80,6 +80,19 @@
 					<div id="overlayPreplayContents">
 						<h3 id="overlayLevelName">LEVEL NAME</h3>
 					</div>
+					<div id="overlayGzContents">
+						<h3>Congratulations!</h3>
+						<div class="statsContainer container">
+							You have finished this set. You can try getting better scores, or
+							go for another set!
+						</div>
+						<div class="buttonContainer container">
+							<button id="gzLevelListButton" class="mainButton">
+								Level list
+							</button>
+							<button id="gzSetSelectorButton">Set selector</button>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="stats">
