Add a shutter to the pause screen

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -76,6 +76,17 @@
 					</div>
 					<div id="overlayPauseContents">
 						<h3>Paused</h3>
+						<div class="statsContainer container">
+							<h4>Did you know?</h4>
+							You can submit fun facts for this box by contacting ʐ̈ MANNNNNNN
+							via the
+							<a href="https://discord.gg/a7rTCkycpD"
+								>Chip's Challenge Bit Busters Club Discord Server</a
+							>.
+						</div>
+						<div class="buttonContainer container">
+							<button id="unpauseButton" class="mainButton">Unpause</button>
+						</div>
 					</div>
 					<div id="overlayPreplayContents">
 						<h3 id="overlayLevelName">LEVEL NAME</h3>
