Show a list of sets to load from GliderBot

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -214,55 +214,14 @@
 				<input type="file" id="fileLoader" accept=".c2m,.zip" />
 				<input type="file" webkitdirectory id="directoryLoader" />
 			</div>
-			<template id="setEntryTemplate">
-				<li class="setEntry">
-					<img class="setPreview container" />
+			<template id="setListItemTemplate">
+				<li class="container">
+					<div class="setPreview"></div>
 					<h3 class="setName">GLP1</h3>
-					<p class="setDesc">The best set ever.</p>
+					<p class="setDescription">The best set ever.</p>
 				</li>
 			</template>
-			<ul id="setList">
-				<li class="setEntry container">
-					<img class="setPreview" width="320" height="320" />
-					<h3 class="setName">GLP1</h3>
-					<p class="setDesc">The best set ever.</p>
-				</li>
-				<li class="setEntry container">
-					<img class="setPreview" width="320" height="320" />
-					<h3 class="setName">GLP1</h3>
-					<p class="setDesc">The best set ever.</p>
-				</li>
-				<li class="setEntry container">
-					<img class="setPreview" width="320" height="320" />
-					<h3 class="setName">GLP1</h3>
-					<p class="setDesc">The best set ever.</p>
-				</li>
-				<li class="setEntry container">
-					<img class="setPreview" width="320" height="320" />
-					<h3 class="setName">GLP1</h3>
-					<p class="setDesc">The best set ever.</p>
-				</li>
-				<li class="setEntry container">
-					<img class="setPreview" width="320" height="320" />
-					<h3 class="setName">GLP1</h3>
-					<p class="setDesc">The best set ever.</p>
-				</li>
-				<li class="setEntry container">
-					<img class="setPreview" width="320" height="320" />
-					<h3 class="setName">GLP1</h3>
-					<p class="setDesc">The best set ever.</p>
-				</li>
-				<li class="setEntry container">
-					<img class="setPreview" width="320" height="320" />
-					<h3 class="setName">GLP1</h3>
-					<p class="setDesc">The best set ever.</p>
-				</li>
-				<li class="setEntry container">
-					<img class="setPreview" width="320" height="320" />
-					<h3 class="setName">GLP1</h3>
-					<p class="setDesc">The best set ever.</p>
-				</li>
-			</ul>
+			<ul id="setList"></ul>
 		</main>
 
 		<script src="/src/index.ts" type="module"></script>
