--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -1,229 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="/icon.png" />
-		<title>NotCC</title>
-	</head>
-	<body class="gameBody">
-		<template id="tooltipTemplate">
-			<div class="tooltipRoot">
-				<div class="tooltipTriangle"></div>
-				<div class="tooltipBox container buttonTooltipBox"></div>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="icon" href="/icon.png" />
+	<title>NotCC</title>
+</head>
+
+<body class="gameBody">
+	<template id="tooltipTemplate">
+		<div class="tooltipRoot">
+			<div class="tooltipTriangle"></div>
+			<div class="tooltipBox container buttonTooltipBox"></div>
+		</div>
+	</template>
+	<template id="tilesetInfoTemplate">
+		<span>
+			<h3 id="tsetTitle">Tile World</h3>
+			<p id="tsetDescription">Blah bleh bloh</p>
+			<p>
+				By: <span id="tsetCredits">48px</span><br />
+				Tile size: <span id="tsetTileSize">48px</span><br />
+				Wire width: <span id="tsetWireWidth">2px</span>
+			</p>
+		</span>
+	</template>
+	<nav class="sidebar container">
+		<div title="Set Selector" class="sidebarButton" id="selectorTab">
+			<img src="./tabIcons/leaf.svg" tabindex="0" draggable="false" />
+		</div>
+		<div title="Level" class="sidebarButton" id="levelTab">
+			<div class="levelIconContainer">
+				<img src="./tabIcons/level.svg" tabindex="0" draggable="false" />
+				<div id="levelIconText">?</div>
 			</div>
-		</template>
-		<template id="tilesetInfoTemplate">
-			<span>
-				<h3 id="tsetTitle">Tile World</h3>
-				<p id="tsetDescription">Blah bleh bloh</p>
-				<p>
-					By: <span id="tsetCredits">48px</span><br />
-					Tile size: <span id="tsetTileSize">48px</span><br />
-					Wire width: <span id="tsetWireWidth">2px</span>
-				</p>
-			</span>
-		</template>
-		<nav class="sidebar container">
-			<div title="Set Selector" class="sidebarButton" id="selectorTab">
-				<img src="./tabIcons/leaf.svg" tabindex="0" draggable="false" />
-			</div>
-			<div title="Level" class="sidebarButton" id="levelTab">
-				<div class="levelIconContainer">
-					<img src="./tabIcons/level.svg" tabindex="0" draggable="false" />
-					<div id="levelIconText">?</div>
-				</div>
-			</div>
-			<div title="Solutions" class="sidebarButton" id="solutionTab">
-				<img src="./tabIcons/floppy.svg" tabindex="0" draggable="false" />
-			</div>
-			<div title="Optimization" class="sidebarButton" id="optimizationTab">
-				<img src="./tabIcons/clock.svg" tabindex="0" draggable="false" />
-			</div>
-			<div title="Settings" class="sidebarButton bottomButton" id="settingsTab">
-				<img src="./tabIcons/tools.svg" tabindex="0" draggable="false" />
-			</div>
-			<div title="About" class="sidebarButton" id="aboutTab">
-				<img src="./tabIcons/info.svg" tabindex="0" draggable="false" />
-			</div>
-		</nav>
-		<dialog id="levelListDialog">
-			<header>Level list</header>
+		</div>
+		<div title="Solutions" class="sidebarButton" id="solutionTab">
+			<img src="./tabIcons/floppy.svg" tabindex="0" draggable="false" />
+		</div>
+		<div title="Optimization" class="sidebarButton" id="optimizationTab">
+			<img src="./tabIcons/clock.svg" tabindex="0" draggable="false" />
+		</div>
+		<div title="Settings" class="sidebarButton bottomButton" id="settingsTab">
+			<img src="./tabIcons/tools.svg" tabindex="0" draggable="false" />
+		</div>
+		<div title="About" class="sidebarButton" id="aboutTab">
+			<img src="./tabIcons/info.svg" tabindex="0" draggable="false" />
+		</div>
+	</nav>
+	<dialog id="levelListDialog">
+		<header>Level list</header>
+		<section>
+			<table id="levelList">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Level</th>
+					</tr>
+				</thead>
+				<tbody></tbody>
+			</table>
+		</section>
+
+		<footer><button class="closeButton">Ok</button></footer>
+	</dialog>
+	<dialog id="themeSelectorDialog" class="textDialog">
+		<form method="dialog">
+			<header>Theme select</header>
+			<section class="preferences">
+				<label for="themeHue">Hue:</label>
+				<input id="themeHue" type="range" min="0" max="360" />
+
+				<label for="themeSaturation">Saturation:</label>
+				<input id="themeSaturation" type="range" min="0" max="100" />
+			</section>
+			<footer>
+				<button value="ok" type="submit">Ok</button>
+				<button value="cancel" type="submit">Cancel</button>
+			</footer>
+		</form>
+	</dialog>
+	<dialog id="tilesetSelectorDialog">
+		<form method="dialog">
+			<input type="file" id="customTilesetLoader" />
+
+			<header>Tileset select</header>
 			<section>
-				<table id="levelList">
+				<table id="tilesetList">
 					<thead>
 						<tr>
-							<th>#</th>
-							<th>Level</th>
+							<th style="width: 10%">Selected</th>
+							<th>Preview</th>
+							<th>Info</th>
+							<th></th>
 						</tr>
 					</thead>
 					<tbody></tbody>
+					<tfoot id="externalTilesetFooter">
+						<tr>
+							<td colspan="4">
+								<button id="addTilesetButton" type="button">+ Tileset</button>
+							</td>
+						</tr>
+					</tfoot>
 				</table>
 			</section>
+			<footer>
+				<button value="ok" type="submit">Ok</button>
+				<button value="cancel" type="submit">Cancel</button>
+			</footer>
+		</form>
+	</dialog>
+	<dialog id="settingsDialog" class="textDialog">
+		<form method="dialog">
+			<header>Settings</header>
+			<section>
+				<h3>Visuals</h3>
+				<div class="preferences">
+					<label for="mainTheme">Main theme:</label>
+					<span><button type="button" id="mainTheme" class="themeButton">
+							<div class="themeCircle"></div>
+						</button>
+					</span>
 
-			<footer><button class="closeButton">Ok</button></footer>
-		</dialog>
-		<dialog id="themeSelectorDialog" class="textDialog">
-			<form method="dialog">
-				<header>Theme select</header>
-				<section class="preferences">
-					<label for="themeHue">Hue:</label>
-					<input id="themeHue" type="range" min="0" max="360" />
-
-					<label for="themeSaturation">Saturation:</label>
-					<input id="themeSaturation" type="range" min="0" max="100" />
-				</section>
-				<footer>
-					<button value="ok" type="submit">Ok</button>
-					<button value="cancel" type="submit">Cancel</button>
-				</footer>
-			</form>
-		</dialog>
-		<dialog id="tilesetSelectorDialog">
-			<form method="dialog">
-				<input type="file" id="customTilesetLoader" />
-
-				<header>Tileset select</header>
-				<section>
-					<table id="tilesetList">
-						<thead>
-							<tr>
-								<th style="width: 10%">Selected</th>
-								<th>Preview</th>
-								<th>Info</th>
-								<th></th>
-							</tr>
-						</thead>
-						<tbody></tbody>
-						<tfoot id="externalTilesetFooter">
-							<tr>
-								<td colspan="4">
-									<button id="addTilesetButton" type="button">+ Tileset</button>
-								</td>
-							</tr>
-						</tfoot>
-					</table>
-				</section>
-				<footer>
-					<button value="ok" type="submit">Ok</button>
-					<button value="cancel" type="submit">Cancel</button>
-				</footer>
-			</form>
-		</dialog>
-		<dialog id="settingsDialog" class="textDialog">
-			<form method="dialog">
-				<header>Settings</header>
-				<section>
-					<h3>Visuals</h3>
-					<div class="preferences">
-						<label for="mainTheme">Main theme:</label>
-						<span
-							><button type="button" id="mainTheme" class="themeButton">
-								<div class="themeCircle"></div>
-							</button>
-						</span>
-
-						<label for="currentTileset">Tileset:</label>
-						<span>
-							<b id="currentTilesetText">CGA17000</b>
-							<button type="button" id="currentTileset">Change tileset</button>
-						</span>
+					<label for="currentTileset">Tileset:</label>
+					<span>
+						<b id="currentTilesetText">CGA17000</b>
+						<button type="button" id="currentTileset">Change tileset</button>
+					</span>
+				</div>
+			</section>
+			<footer>
+				<button value="ok" type="submit">Ok</button>
+				<button value="cancel" type="submit">Cancel</button>
+			</footer>
+		</form>
+	</dialog>
+	<main id="loadingPage" class="container">
+		<p>Loading, standy...</p>
+	</main>
+	<main id="levelPlayerPage" class="container closedPage">
+		<div class="viewportArea">
+			<canvas id="levelViewportCanvas" class="pixelCanvas"></canvas>
+			<div id="levelViewportOverlay">
+				<div id="overlayWinContents">
+					<h3>You won!!</h3>
+					<div class="buttonContainer container">
+						<button id="scoresButton">Scores</button>
+						<button id="nextLevelButton" class="mainButton">
+							Next level
+						</button>
+						<button id="explodeJupiterButton">Explode Jupiter</button>
 					</div>
-				</section>
-				<footer>
-					<button value="ok" type="submit">Ok</button>
-					<button value="cancel" type="submit">Cancel</button>
-				</footer>
-			</form>
-		</dialog>
-		<main id="loadingPage" class="container"><p>Loading, standy...</p></main>
-		<main id="levelPlayerPage" class="container closedPage">
-			<div class="viewportArea">
-				<canvas id="levelViewportCanvas" class="pixelCanvas"></canvas>
-				<div id="levelViewportOverlay">
-					<div id="overlayWinContents">
-						<h3>You won!!</h3>
-						<div class="buttonContainer container">
-							<button id="scoresButton">Scores</button>
-							<button id="nextLevelButton" class="mainButton">
-								Next level
-							</button>
-							<button id="explodeJupiterButton">Explode Jupiter</button>
-						</div>
+				</div>
+				<div id="overlayLoseContents">
+					<h3 class="deathOnly">You died...</h3>
+					<h3 class="timeoutOnly">You ran out of time...</h3>
+					<div class="buttonContainer container">
+						<button id="restartButton" class="mainButton">Restart</button>
 					</div>
-					<div id="overlayLoseContents">
-						<h3 class="deathOnly">You died...</h3>
-						<h3 class="timeoutOnly">You ran out of time...</h3>
-						<div class="buttonContainer container">
-							<button id="restartButton" class="mainButton">Restart</button>
-						</div>
+				</div>
+				<div id="overlayPauseContents">
+					<h3>Paused</h3>
+					<div class="statsContainer container">
+						<h4>Did you know?</h4>
+						You can submit fun facts for this box by contacting ʐ̈ MANNNNNNN
+						via the
+						<a href="https://discord.gg/a7rTCkycpD">Chip's Challenge Bit Busters Club Discord Server</a>.
 					</div>
-					<div id="overlayPauseContents">
-						<h3>Paused</h3>
-						<div class="statsContainer container">
-							<h4>Did you know?</h4>
-							You can submit fun facts for this box by contacting ʐ̈ MANNNNNNN
-							via the
-							<a href="https://discord.gg/a7rTCkycpD"
-								>Chip's Challenge Bit Busters Club Discord Server</a
-							>.
-						</div>
-						<div class="buttonContainer container">
-							<button id="unpauseButton" class="mainButton">Unpause</button>
-						</div>
+					<div class="buttonContainer container">
+						<button id="unpauseButton" class="mainButton">Unpause</button>
 					</div>
-					<div id="overlayPreplayContents">
-						<h3 id="overlayLevelName">LEVEL NAME</h3>
+				</div>
+				<div id="overlayPreplayContents">
+					<h3 id="overlayLevelName">LEVEL NAME</h3>
+				</div>
+				<div id="overlayGzContents">
+					<h3>Congratulations!</h3>
+					<div class="statsContainer container">
+						You have finished this set. You can try getting better scores, or
+						go for another set!
 					</div>
-					<div id="overlayGzContents">
-						<h3>Congratulations!</h3>
-						<div class="statsContainer container">
-							You have finished this set. You can try getting better scores, or
-							go for another set!
-						</div>
-						<div class="buttonContainer container">
-							<button id="gzLevelListButton" class="mainButton">
-								Level list
-							</button>
-							<button id="gzSetSelectorButton">Set selector</button>
-						</div>
+					<div class="buttonContainer container">
+						<button id="gzLevelListButton" class="mainButton">
+							Level list
+						</button>
+						<button id="gzSetSelectorButton">Set selector</button>
 					</div>
 				</div>
 			</div>
-			<div class="stats">
-				<div>Chips:</div>
-				<output id="chipsText">12</output>
-				<div>Time left:</div>
-				<output id="timeLeftText">120s</output>
-				<div>Bonus points:</div>
-				<output id="bonusPointsText">4200</output>
-			</div>
-			<canvas class="pixelCanvas" id="levelInventoryCanvas"></canvas>
-			<div class="container" id="hintBox"></div>
-		</main>
-		<main class="closedPage" id="setSelectorPage">
-			<header class="container">
-				<img src="./iconBig.png" />
-				<h1>NotCC</h1>
-				<p>A to-be scoreboard-legal Chip's Challenge 2® emulator.</p>
-			</header>
-			<div id="fileLoaderBar" class="container">
-				<p>Load external files:</p>
-				<button id="loadFile">Load file</button>
-				<button id="loadDirectory">Load directory</button>
-				<input type="file" id="fileLoader" accept=".c2m,.zip" />
-				<input type="file" webkitdirectory id="directoryLoader" />
-			</div>
-			<template id="setListItemTemplate">
-				<li class="container">
-					<div class="setPreview"></div>
-					<h3 class="setName">GLP1</h3>
-					<p class="setDescription">The best set ever.</p>
-				</li>
-			</template>
-			<ul id="setList"></ul>
-		</main>
+		</div>
+		<div class="stats">
+			<div>Chips:</div>
+			<output id="chipsText">12</output>
+			<div>Time left:</div>
+			<output id="timeLeftText">120s</output>
+			<div>Bonus points:</div>
+			<output id="bonusPointsText">4200</output>
+		</div>
+		<canvas class="pixelCanvas" id="levelInventoryCanvas"></canvas>
+		<div class="container" id="hintBox"></div>
+	</main>
+	<main class="closedPage" id="setSelectorPage">
+		<header class="container">
+			<img src="./iconBig.png" />
+			<h1>NotCC</h1>
+			<p>A to-be scoreboard-legal Chip's Challenge 2® emulator.</p>
+		</header>
+		<div id="fileLoaderBar" class="container">
+			<p>Load external files:</p>
+			<button id="loadFile">Load file</button>
+			<button id="loadDirectory">Load directory</button>
+			<input type="file" id="fileLoader" accept=".c2m,.zip" />
+			<input type="file" webkitdirectory id="directoryLoader" />
+		</div>
+		<template id="setListItemTemplate">
+			<li class="container">
+				<div class="setThumbnail"></div>
+				<h3 class="setName"><span>GLP1</span></h3>
+				<p>
+					<span class="setBy">By: <span>G lander</span><br /></span>
+					<span class="setDifficulty">Difficulty: <span>2</span> / 5<br /></span>
+					<span class="setDescription"><span>The best set ever.</span></span>
+				</p>
+			</li>
+		</template>
+		<ul id="setList"></ul>
+	</main>
 
-		<script src="/src/index.ts" type="module"></script>
-	</body>
+	<script src="/src/index.ts" type="module"></script>
+</body>
+
 </html>
