Add (internal) set sorting

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -215,7 +215,7 @@
 			<input type="file" id="fileLoader" accept=".c2m,.zip" />
 			<input type="file" webkitdirectory id="directoryLoader" />
 		</div>
-		<template id="setListItemTemplate">
+		<template id="setLiTemplate">
 			<li class="container">
 				<div class="setThumbnail"></div>
 				<h3 class="setName"><span>GLP1</span></h3>
