--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -1,123 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" href="/icon.png" />
+		<title>NotCC</title>
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="icon" href="/icon.png" />
-	<title>NotCC</title>
-</head>
-
-<body class="gameBody">
-	<template id="tooltipTemplate">
-		<div class="tooltipRoot">
-			<div class="tooltipTriangle"></div>
-			<div class="tooltipBox container buttonTooltipBox"></div>
-		</div>
-	</template>
-	<template id="tilesetInfoTemplate">
-		<span>
-			<h3 id="tsetTitle">Tile World</h3>
-			<p id="tsetDescription">Blah bleh bloh</p>
-			<p>
-				By: <span id="tsetCredits">48px</span><br />
-				Tile size: <span id="tsetTileSize">48px</span><br />
-				Wire width: <span id="tsetWireWidth">2px</span>
-			</p>
-		</span>
-	</template>
-	<nav class="sidebar container">
-		<div title="Set Selector" class="sidebarButton" id="selectorTab">
-			<img src="./tabIcons/leaf.svg" tabindex="0" draggable="false" />
-		</div>
-		<div title="Level" class="sidebarButton" id="levelTab">
-			<div class="levelIconContainer">
-				<img src="./tabIcons/level.svg" tabindex="0" draggable="false" />
-				<div id="levelIconText">?</div>
+	<body class="gameBody">
+		<template id="tooltipTemplate">
+			<div class="tooltipRoot">
+				<div class="tooltipTriangle"></div>
+				<div class="tooltipBox container buttonTooltipBox"></div>
 			</div>
-		</div>
-		<div title="Solutions" class="sidebarButton" id="solutionTab">
-			<img src="./tabIcons/floppy.svg" tabindex="0" draggable="false" />
-		</div>
-		<div title="Optimization" class="sidebarButton" id="optimizationTab">
-			<img src="./tabIcons/clock.svg" tabindex="0" draggable="false" />
-		</div>
-		<div title="Settings" class="sidebarButton bottomButton" id="settingsTab">
-			<img src="./tabIcons/tools.svg" tabindex="0" draggable="false" />
-		</div>
-		<div title="About" class="sidebarButton" id="aboutTab">
-			<img src="./tabIcons/info.svg" tabindex="0" draggable="false" />
-		</div>
-	</nav>
-	<dialog id="levelListDialog">
-		<header>Level list</header>
-		<section>
-			<table id="levelList">
-				<thead>
-					<tr>
-						<th>#</th>
-						<th>Level</th>
-					</tr>
-				</thead>
-				<tbody></tbody>
-			</table>
-		</section>
-
-		<footer><button class="closeButton">Ok</button></footer>
-	</dialog>
-	<dialog id="themeSelectorDialog" class="textDialog">
-		<form method="dialog">
-			<header>Theme select</header>
-			<section class="preferences">
-				<label for="themeHue">Hue:</label>
-				<input id="themeHue" type="range" min="0" max="360" />
-
-				<label for="themeSaturation">Saturation:</label>
-				<input id="themeSaturation" type="range" min="0" max="100" />
-			</section>
-			<footer>
-				<button value="ok" type="submit">Ok</button>
-				<button value="cancel" type="submit">Cancel</button>
-			</footer>
-		</form>
-	</dialog>
-	<dialog id="tilesetSelectorDialog">
-		<form method="dialog">
-			<header>Tileset select</header>
+		</template>
+		<template id="tilesetInfoTemplate">
+			<span>
+				<h3 id="tsetTitle">Tile World</h3>
+				<p id="tsetDescription">Blah bleh bloh</p>
+				<p>
+					By: <span id="tsetCredits">48px</span><br />
+					Tile size: <span id="tsetTileSize">48px</span><br />
+					Wire width: <span id="tsetWireWidth">2px</span>
+				</p>
+			</span>
+		</template>
+		<nav class="sidebar container">
+			<div title="Set Selector" class="sidebarButton" id="selectorTab">
+				<img src="./tabIcons/leaf.svg" tabindex="0" draggable="false" />
+			</div>
+			<div title="Level" class="sidebarButton" id="levelTab">
+				<div class="levelIconContainer">
+					<img src="./tabIcons/level.svg" tabindex="0" draggable="false" />
+					<div id="levelIconText">?</div>
+				</div>
+			</div>
+			<div title="Solutions" class="sidebarButton" id="solutionTab">
+				<img src="./tabIcons/floppy.svg" tabindex="0" draggable="false" />
+			</div>
+			<div title="Optimization" class="sidebarButton" id="optimizationTab">
+				<img src="./tabIcons/clock.svg" tabindex="0" draggable="false" />
+			</div>
+			<div title="Settings" class="sidebarButton bottomButton" id="settingsTab">
+				<img src="./tabIcons/tools.svg" tabindex="0" draggable="false" />
+			</div>
+			<div title="About" class="sidebarButton" id="aboutTab">
+				<img src="./tabIcons/info.svg" tabindex="0" draggable="false" />
+			</div>
+		</nav>
+		<dialog id="levelListDialog">
+			<header>Level list</header>
 			<section>
-				<table id="tilesetList">
+				<table id="levelList">
 					<thead>
 						<tr>
-							<th style="width: 10%">Selected</th>
-							<th>Preview</th>
-							<th>Info</th>
-							<th></th>
+							<th>#</th>
+							<th>Level</th>
 						</tr>
 					</thead>
 					<tbody></tbody>
-					<tfoot id="externalTilesetFooter">
-						<tr>
-							<td colspan="4">
-								<button id="addTilesetButton" type="button">+ Tileset</button>
-							</td>
-						</tr>
-					</tfoot>
 				</table>
 			</section>
-			<footer>
-				<button value="ok" type="submit">Ok</button>
-				<button value="cancel" type="submit">Cancel</button>
-			</footer>
-		</form>
-	</dialog>
-	<dialog id="settingsDialog" class="textDialog">
-		<form method="dialog">
-			<header>Settings</header>
-			<section>
-				<h3>Visuals</h3>
-				<div class="preferences">
+
+			<footer><button class="closeButton">Ok</button></footer>
+		</dialog>
+		<dialog id="themeSelectorDialog" class="textDialog">
+			<form method="dialog">
+				<header>Theme select</header>
+				<section class="preferences">
+					<label for="themeHue">Hue:</label>
+					<input id="themeHue" type="range" min="0" max="360" />
+
+					<label for="themeSaturation">Saturation:</label>
+					<input id="themeSaturation" type="range" min="0" max="100" />
+				</section>
+				<footer>
+					<button value="ok" type="submit">Ok</button>
+					<button value="cancel" type="submit">Cancel</button>
+				</footer>
+			</form>
+		</dialog>
+		<dialog id="tilesetSelectorDialog">
+			<form method="dialog">
+				<header>Tileset select</header>
+				<section>
+					<table id="tilesetList">
+						<thead>
+							<tr>
+								<th style="width: 10%">Selected</th>
+								<th>Preview</th>
+								<th>Info</th>
+								<th></th>
+							</tr>
+						</thead>
+						<tbody></tbody>
+						<tfoot id="externalTilesetFooter">
+							<tr>
+								<td colspan="4">
+									<button id="addTilesetButton" type="button">+ Tileset</button>
+								</td>
+							</tr>
+						</tfoot>
+					</table>
+				</section>
+				<footer>
+					<button value="ok" type="submit">Ok</button>
+					<button value="cancel" type="submit">Cancel</button>
+				</footer>
+			</form>
+		</dialog>
+		<dialog id="settingsDialog" class="textDialog">
+			<form method="dialog">
+				<header>Settings</header>
+				<section class="preferences">
+					<h3>Visuals</h3>
 					<label for="mainTheme">Main theme:</label>
-					<span><button type="button" id="mainTheme" class="themeButton">
+					<span
+						><button type="button" id="mainTheme" class="themeButton">
 							<div class="themeCircle"></div>
 						</button>
 					</span>
@@ -127,86 +126,102 @@
 						<b id="currentTilesetText">CGA17000</b>
 						<button type="button" id="currentTileset">Change tileset</button>
 					</span>
-				</div>
-			</section>
-			<footer>
-				<button value="ok" type="submit">Ok</button>
-				<button value="cancel" type="submit">Cancel</button>
-			</footer>
-		</form>
-	</dialog>
-	<main id="loadingPage" class="container">
-		<p>Loading, standy...</p>
-	</main>
-	<main id="levelPlayerPage" class="container closedPage playerPage">
-		<div class="viewportArea">
-			<canvas class="viewportCanvas" class="pixelCanvas"></canvas>
-			<div id="levelViewportOverlay">
-				<div id="overlayWinContents">
-					<h3>You won!!</h3>
-					<div class="buttonContainer container">
-						<button id="scoresButton">Scores</button>
-						<button id="nextLevelButton" class="mainButton">
-							Next level
-						</button>
-						<button id="explodeJupiterButton">Explode Jupiter</button>
-					</div>
-				</div>
-				<div id="overlayLoseContents">
-					<h3 class="deathOnly">You died...</h3>
-					<h3 class="timeoutOnly">You ran out of time...</h3>
-					<div class="buttonContainer container">
-						<button id="restartButton" class="mainButton">Restart</button>
-					</div>
-				</div>
-				<div id="overlayPauseContents">
-					<h3>Paused</h3>
-					<div class="statsContainer container">
-						<h4>Did you know?</h4>
-						You can submit fun facts for this box by contacting ʐ̈ MANNNNNNN
-						via the
-						<a href="https://discord.gg/a7rTCkycpD">Chip's Challenge Bit Busters Club Discord Server</a>.
-					</div>
-					<div class="buttonContainer container">
-						<button id="unpauseButton" class="mainButton">Unpause</button>
-					</div>
-				</div>
-				<div id="overlayPreplayContents">
-					<h3 id="overlayLevelName">LEVEL NAME</h3>
-				</div>
-				<div id="overlayGzContents">
-					<h3>Congratulations!</h3>
-					<div class="statsContainer container">
-						You have finished this set. You can try getting better scores, or
-						go for another set!
-					</div>
-					<div class="buttonContainer container">
-						<button id="gzLevelListButton" class="mainButton">
-							Level list
-						</button>
-						<button id="gzSetSelectorButton">Set selector</button>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="stats">
-			<div>Chips:</div>
-			<output class="chipsText">12</output>
-			<div>Time left:</div>
-			<output class="timeLeftText">120s</output>
-			<div>Bonus points:</div>
-			<output class="bonusPointsText">4200</output>
-		</div>
-		<canvas class="pixelCanvas inventoryCanvas"></canvas>
-		<div class="container" id="hintBox"></div>
-	</main>
-	<main id="exaPlayerPage" class="closedPage playerPage">
-		<div class="viewportContainer container">
+					<h3>Glitches</h3>
+					<label for="preventNonLegalGlitches"
+						>Prevent non-legal glitch use:</label
+					>
+					<span><input type="checkbox" id="preventNonLegalGlitches" /></span>
+					<p>
+						There are a couple of glitches which are not allowed in competitive
+						play, which are called non-legal glitches. If this option is
+						enabled, an attempt to use a non-legal glitch will fail the level.
+					</p>
+					<label for="preventSimulMovement"
+						>Prevent simultaneous movement:</label
+					>
+					<span><input type="checkbox" id="preventSimulMovement" /></span>
+					<p>
+						Simultaneous character movement is a non-legal glitch where two
+						characters can be moved at the same by pressing the character switch
+						and a direction key at the same time. If this option is enabled,
+						pressing the character switch key will let go of all other input
+						keys, preventing the simultaneous character movement glitch.
+					</p>
+				</section>
+				<footer>
+					<button value="ok" type="submit">Ok</button>
+					<button value="cancel" type="submit">Cancel</button>
+				</footer>
+			</form>
+		</dialog>
+		<main id="loadingPage" class="container">
+			<p>Loading, standy...</p>
+		</main>
+		<main id="levelPlayerPage" class="container closedPage playerPage">
 			<div class="viewportArea">
 				<canvas class="viewportCanvas" class="pixelCanvas"></canvas>
+				<div id="levelViewportOverlay">
+					<div id="overlayWinContents">
+						<h3>You won!!</h3>
+						<div class="buttonContainer container">
+							<button id="scoresButton">Scores</button>
+							<button id="nextLevelButton" class="mainButton">
+								Next level
+							</button>
+							<button id="explodeJupiterButton">Explode Jupiter</button>
+						</div>
+					</div>
+					<div id="overlayLoseContents">
+						<h3 class="deathOnly">You died...</h3>
+						<h3 class="timeoutOnly">You ran out of time...</h3>
+						<div class="buttonContainer container">
+							<button id="restartButton" class="mainButton">Restart</button>
+						</div>
+					</div>
+					<div id="overlayPauseContents">
+						<h3>Paused</h3>
+						<div class="statsContainer container">
+							<h4>Did you know?</h4>
+							You can submit fun facts for this box by contacting ʐ̈ MANNNNNNN
+							via the
+							<a href="https://discord.gg/a7rTCkycpD"
+								>Chip's Challenge Bit Busters Club Discord Server</a
+							>.
+						</div>
+						<div class="buttonContainer container">
+							<button id="unpauseButton" class="mainButton">Unpause</button>
+						</div>
+					</div>
+					<div id="overlayPreplayContents">
+						<h3 id="overlayLevelName">LEVEL NAME</h3>
+					</div>
+					<div id="overlayNonlegalContents">
+						<h3>Stop! You've violated the law!</h3>
+						<div class="statsContainer container small">
+							The following glitch has occured:
+							<span id="nonLegalGlitchName"></span>
+						</div>
+						<div class="buttonContainer container">
+							<button id="nonLegalRestartButton" class="mainButton">
+								Restart
+							</button>
+						</div>
+					</div>
+					<div id="overlayGzContents">
+						<h3>Congratulations!</h3>
+						<div class="statsContainer container">
+							You have finished this set. You can try getting better scores, or
+							go for another set!
+						</div>
+						<div class="buttonContainer container">
+							<button id="gzLevelListButton" class="mainButton">
+								Level list
+							</button>
+							<button id="gzSetSelectorButton">Set selector</button>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
-		<div class="container infoContainer">
 			<div class="stats">
 				<div>Chips:</div>
 				<output class="chipsText">12</output>
@@ -216,39 +231,59 @@
 				<output class="bonusPointsText">4200</output>
 			</div>
 			<canvas class="pixelCanvas inventoryCanvas"></canvas>
-		</div>
-		<div class="container movesContainer">
-			<div class="movesArea">
-				<span class="recordedMoves"></span><span class="composingPreview"></span>
+			<div class="container" id="hintBox"></div>
+		</main>
+		<main id="exaPlayerPage" class="closedPage playerPage">
+			<div class="viewportContainer container">
+				<div class="viewportArea">
+					<canvas class="viewportCanvas" class="pixelCanvas"></canvas>
+				</div>
 			</div>
-		</div>
-	</main>
-	<main class="closedPage playerPage" id="setSelectorPage">
-		<header class="container">
-			<img src="./iconBig.png" />
-			<h1>NotCC</h1>
-			<p>A to-be scoreboard-legal Chip's Challenge 2® emulator.</p>
-		</header>
-		<div id="fileLoaderBar" class="container">
-			<p>Load external files:</p>
-			<button id="loadFile">Load file</button>
-			<button id="loadDirectory">Load directory</button>
-		</div>
-		<template id="setLiTemplate">
-			<li class="container">
-				<div class="setThumbnail"></div>
-				<h3 class="setName"><span>GLP1</span></h3>
-				<p>
-					<span class="setBy">By: <span>G lander</span><br /></span>
-					<span class="setDifficulty">Difficulty: <span>2</span> / 5<br /></span>
-					<span class="setDescription"><span>The best set ever.</span></span>
-				</p>
-			</li>
-		</template>
-		<ul id="setList"></ul>
-	</main>
+			<div class="container infoContainer">
+				<div class="stats">
+					<div>Chips:</div>
+					<output class="chipsText">12</output>
+					<div>Time left:</div>
+					<output class="timeLeftText">120s</output>
+					<div>Bonus points:</div>
+					<output class="bonusPointsText">4200</output>
+				</div>
+				<canvas class="pixelCanvas inventoryCanvas"></canvas>
+			</div>
+			<div class="container movesContainer">
+				<div class="movesArea">
+					<span class="recordedMoves"></span
+					><span class="composingPreview"></span>
+				</div>
+			</div>
+		</main>
+		<main class="closedPage playerPage" id="setSelectorPage">
+			<header class="container">
+				<img src="./iconBig.png" />
+				<h1>NotCC</h1>
+				<p>A to-be scoreboard-legal Chip's Challenge 2® emulator.</p>
+			</header>
+			<div id="fileLoaderBar" class="container">
+				<p>Load external files:</p>
+				<button id="loadFile">Load file</button>
+				<button id="loadDirectory">Load directory</button>
+			</div>
+			<template id="setLiTemplate">
+				<li class="container">
+					<div class="setThumbnail"></div>
+					<h3 class="setName"><span>GLP1</span></h3>
+					<p>
+						<span class="setBy">By: <span>G lander</span><br /></span>
+						<span class="setDifficulty"
+							>Difficulty: <span>2</span> / 5<br
+						/></span>
+						<span class="setDescription"><span>The best set ever.</span></span>
+					</p>
+				</li>
+			</template>
+			<ul id="setList"></ul>
+		</main>
 
-	<script src="/src/index.ts" type="module"></script>
-</body>
-
+		<script src="/src/index.ts" type="module"></script>
+	</body>
 </html>
