Display best time/score for beaten levels in the level list

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -56,6 +56,9 @@
 						<tr>
 							<th>#</th>
 							<th>Level</th>
+							<th>Best time</th>
+							<th>Best score</th>
+							<!-- <th>Best real time</th> -->
 						</tr>
 					</thead>
 					<tbody></tbody>
