--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -157,6 +157,72 @@
 				</footer>
 			</form>
 		</dialog>
+		<dialog id="aboutDialog" class="textDialog">
+			<form method="dialog">
+				<header>About NotCC</header>
+				<section>
+					<h3>NotCC</h3>
+					<p>
+						NotCC is an
+						<a target="_blank" href="https://github.com/TheGLander/NotCC"
+							>open-source</a
+						>
+						accurate CC2 emulator. <br /><br />
+						Made by
+						<a target="_blank" href="https://glander.club/">G lander</a>.
+					</p>
+					<p>Thanks to:</p>
+					<ul>
+						<li>
+							The Chip's Challenge community, residing at
+							<a target="_blank" href="https://bitbusters.club"
+								>The Bit Busters Club</a
+							>. Also, more specifically:
+						</li>
+						<li>
+							<a target="_blank" href="https://eev.ee/">eevee</a>, for creating
+							the first CC2 emulator,
+							<a target="_blank" href="https://c.eev.ee/lexys-labyrinth/"
+								>Lexy's Labyrinth</a
+							>, which NotCC heavily borrowed (and still borrows) from
+						</li>
+						<li>
+							Markus O.,
+							<a target="_blank" href="https://github.com/Bacorn42">Bacorn</a>,
+							and
+							<a target="_blank" href="https://github.com/SicklySilverMoon"
+								>Sickly</a
+							>, for creating and maintaining SuperCC, the optimization tool
+							ExaCC is heavily inspired by
+						</li>
+						<li>
+							<a target="_blank" href="https://github.com/zrax">Zrax</a>, for
+							creating a very helpful suite of CC tools, appropriately called
+							<a target="_blank" href="http://cctools.zrax.net">CCTools</a>
+						</li>
+						<li>
+							Anders Kaseorg and Kawaiiprincess, for creating and porting to CC2
+							(respectively) the bundled Tile World tileset
+						</li>
+						<li>
+							<a
+								target="_blank"
+								href="https://wiki.bitbusters.club/User:Sharpeye468"
+								>Sharpeye</a
+							>, for finding a bug with ExaCC auto-scaling and being one of the
+							first people to use ExaCC for optimization
+						</li>
+					</ul>
+					<p class="small">
+						Last change: %VITE_LAST_COMMIT_INFO%.<br />
+						Built at %VITE_BUILD_TIME%.
+					</p>
+				</section>
+				<footer>
+					<button type="submit">Close</button>
+				</footer>
+			</form>
+		</dialog>
 		<main id="loadingPage" class="container">
 			<p>Loading, standy...</p>
 		</main>
@@ -187,7 +253,7 @@
 							<h4>Did you know?</h4>
 							You can submit fun facts for this box by contacting ʐ̈ MANNNNNNN
 							via the
-							<a href="https://discord.gg/a7rTCkycpD"
+							<a target="_blank" href="https://discord.gg/a7rTCkycpD"
 								>Chip's Challenge Bit Busters Club Discord Server</a
 							>.
 						</div>
