Add Tyler and IHNN to the credits section

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -250,6 +250,22 @@
 							>, for finding a bug with ExaCC auto-scaling and being one of the
 							first people to use ExaCC for optimization
 						</li>
+						<li>
+							<a target="_blank" href="https://tylersontag.com">Tyler Sontag</a
+							>, for creating the very, <i>very</i> helpful resident Discord
+							bot,
+							<a target="_blank" href="https://bitbusters.club/gliderbot"
+								>Gliderbot</a
+							>.
+						</li>
+						<li>
+							<a
+								target="_blank"
+								href="https://www.blogger.com/profile/14488214217998239760"
+								>IHNN</a
+							>, for providing details and feedback on non-legal glitches and
+							their prevention.
+						</li>
 					</ul>
 					<p class="small">
 						Last change: %VITE_LAST_COMMIT_INFO%.<br />
