NotCC is scoreboard-legal now whoo!

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -384,7 +384,7 @@
 			<header class="container">
 				<img src="./iconBig.png" />
 				<h1>NotCC</h1>
-				<p>A to-be-scoreboard-legal Chip's Challenge 2® emulator.</p>
+				<p>A scoreboard-legal Chip's Challenge 2® emulator.</p>
 			</header>
 			<div id="fileLoaderBar" class="container">
 				<p>Load external files:</p>
