Add optimizer ID setting

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -188,6 +188,22 @@
 						pressing the character switch key will let go of all other input
 						keys, preventing the simultaneous character movement glitch.
 					</p>
+					<h3>Score</h3>
+					<label for="optimizerId">Optimizer ID</label
+					><span
+						><input type="number" id="optimizerId" />
+						<span id="currentUsername"></span
+					></span>
+					<p>
+						The
+						<a target="_blank" href="https://scores.bitbusters.club"
+							>https://scores.bitbusters.club</a
+						>
+						user ID. Required for score report generation.<br />How to optain:
+						Look for the number in your player page URL. For example, If your
+						user page is at https://scores.bitbusters.club/players/75, your
+						optimizer ID is 75.
+					</p>
 				</section>
 				<footer>
 					<button value="ok" type="submit">Ok</button>
