Add OpenGraph meta tags

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -5,6 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" href="/icon.png" />
 		<title>NotCC</title>
+		<meta name="og:type" content="website" />
+		<meta name="og:title" content="NotCC" />
+		<meta
+			name="og:description"
+			content="Scoreboard-legal Chip's Challenge 2® emulator and optimization tool."
+		/>
+		<meta
+			name="description"
+			content="Scoreboard-legal Chip's Challenge 2® emulator and optimization tool."
+		/>
+		<meta name="og:image" content="https://glander.club/notcc/iconBig.png" />
+		<meta name="theme-color" content="#1f61ad" />
 	</head>
 
 	<body class="gameBody">
