Add a total score metric to ExaCC stats

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -426,6 +426,8 @@
 					<output class="timeLeftText">120s</output>
 					<div>Bonus points:</div>
 					<output class="bonusPointsText">4200</output>
+					<div>Total score:</div>
+					<output class="totalScoreText">0</output>
 				</div>
 				<canvas class="pixelCanvas inventoryCanvas"></canvas>
 			</div>
