Replace all native `alert`s with HTML dialogs

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -96,6 +96,13 @@
 				</footer>
 			</form>
 		</dialog>
+		<dialog id="simpleDialog" class="textDialog">
+			<form method="dialog">
+				<header>Alert!</header>
+				<section>Alert body</section>
+				<footer></footer>
+			</form>
+		</dialog>
 		<dialog id="allAttemptsDialog">
 			<template id="successfulAttemptTemplate">
 				<div class="container successful">
