Add support for linking to non-free sets (CC1Steam, CC2)

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -340,6 +340,27 @@
 				</footer>
 			</form>
 		</dialog>
+		<dialog id="nonFreeSetDialog" class="textDialog">
+			<form method="dialog">
+				<header>Non-free set</header>
+				<section>
+					<p>
+						The set you are trying to load is non-free, and cannot be legally
+						accessed from the Gliderbot set repository. If you don't have it,
+						you can
+						<a target="_blank" id="nonFreeSteamLink">but it on Steam here</a>.
+					</p>
+					<p>
+						If you have a copy of the set, load it into NotCC with the Load
+						directory option below.
+					</p>
+				</section>
+				<footer>
+					<button type="submit" value="load">Load directory</button>
+					<button type="submit" value="cancel">Cancel</button>
+				</footer>
+			</form>
+		</dialog>
 		<main id="loadingPage" class="container">
 			<p>Loading, standy...</p>
 		</main>
