Fix periods in the About credits

--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -285,7 +285,7 @@
 							the first CC2 emulator,
 							<a target="_blank" href="https://c.eev.ee/lexys-labyrinth/"
 								>Lexy's Labyrinth</a
-							>, which NotCC heavily borrowed (and still borrows) from
+							>, which NotCC heavily borrowed (and still borrows) from.
 						</li>
 						<li>
 							Markus O.,
@@ -294,16 +294,16 @@
 							<a target="_blank" href="https://github.com/SicklySilverMoon"
 								>Sickly</a
 							>, for creating and maintaining SuperCC, the optimization tool
-							ExaCC is heavily inspired by
+							ExaCC is heavily inspired by.
 						</li>
 						<li>
 							<a target="_blank" href="https://github.com/zrax">Zrax</a>, for
 							creating a very helpful suite of CC tools, appropriately called
-							<a target="_blank" href="http://cctools.zrax.net">CCTools</a>
+							<a target="_blank" href="http://cctools.zrax.net">CCTools</a>.
 						</li>
 						<li>
 							Anders Kaseorg and Kawaiiprincess, for creating and porting to CC2
-							(respectively) the bundled Tile World tileset
+							(respectively) the bundled Tile World tileset.
 						</li>
 						<li>
 							<a
@@ -311,7 +311,7 @@
 								href="https://wiki.bitbusters.club/User:Sharpeye468"
 								>Sharpeye</a
 							>, for finding a bug with ExaCC auto-scaling and being one of the
-							first people to use ExaCC for optimization
+							first people to use ExaCC for optimization.
 						</li>
 						<li>
 							<a target="_blank" href="https://tylersontag.com">Tyler Sontag</a
